# powerapi-qt

./: .gitignore  README  README.md
core/esf-core/: CMakeLists.txt  CMakeTestLists.txt
core/esf-core/cmake/: BuildSetup.cmake  Directories.cmake
core/esf-core/src/main/cpp/bundle/: ESFBundleUtil.cpp  ESFBundleUtil.h  ServiceState.cpp  ServiceState.h
core/esf-core/src/main/cpp/collection/: CollectionUtil.h
core/esf-core/src/main/cpp/db/: ESFDataBase.cpp  ESFDataBase.h
core/esf-core/src/main/cpp/energy/: Energy.cpp  Energy.h
core/esf-core/src/main/cpp/event/: EventListener.h  EventListenerList.h
core/esf-core/src/main/cpp/thread/: QThreadEx.h
core/esf-core/src/test/cpp/bundle/: ServiceStateTest.cpp  ServiceStateTest.h
core/esf-core/src/test/cpp/db/: ESFDataBaseTest.cpp  ESFDataBaseTest.h
core/esf-core/src/test/cpp/util/: TestUtil.h
formulas/esf-cpu-formula/: CMakeLists.txt  CMakeTestLists.txt
formulas/esf-cpu-formula/cmake/: BuildSetup.cmake  Util.cmake
formulas/esf-cpu-formula/cmake/Modules/: FindSOF.cmake
formulas/esf-cpu-formula/src/main/cpp/api/: CPUEnergy.h  CPUFormulaService.h
formulas/esf-cpu-formula/src/main/cpp/business/: CPUEnergy.cpp  CPUFormulaComputer.cpp  CPUFormulaComputer.h  CPUFormulaServiceImpl.cpp  CPUFormulaServiceImpl.h
formulas/esf-network-formula/: CMakeLists.txt
formulas/esf-network-formula/cmake/: BuildSetup.cmake  Util.cmake
formulas/esf-network-formula/src/main/cpp/api/: NetworkEnergy.h  NetworkFormulaService.h
formulas/esf-network-formula/src/main/cpp/business/: NetworkEnergy.cpp  NetworkFormulaComputer.cpp  NetworkFormulaComputer.h  NetworkFormulaServiceImpl.cpp  NetworkFormulaServiceImpl.h
formulas/esf-network-formula/src/main/cpp/control/: NetworkFormulaActivator.cpp  NetworkFormulaActivator.h
formulas/esf-network-formula/src/test/cpp/business/: SimpleTest.cpp  SimpleTest.h
formulas/esf-network-formula/src/test/cpp/util/: TestUtil.h
main/esf-main/: CMakeLists.txt  CMakeTestLists.txt  README
main/esf-main-demo/: CMakeLists.txt  CMakeTestLists.txt  README
main/esf-main-demo/cmake/: BuildSetup.cmake
main/esf-main-demo/cmake/Modules/: FindESFCPUSensor.cmake  FindESFMain.cmake  FindESFNetworkFormula.cmake  FindESFNetworkSensor.cmake
main/esf-main-demo/src/main/cpp/: Main.cpp  ThreadedLauncher.cpp  ThreadedLauncher.h
main/esf-main-demo/src/main/resources/: bundles.sof  commandline  esf-database-filling.sql
main/esf-main-demo/src/test/cpp/util/: TestUtil.h
main/esf-main/cmake/: BuildSetup.cmake
main/esf-main/cmake/Modules/: FindESFCPUFormula.cmake
sensors/esf-cpu-sensor/: CMakeLists.txt  CMakeTestLists.txt
sensors/esf-cpu-sensor/cmake/: BuildSetup.cmake
sensors/esf-cpu-sensor/cmake/Modules/: FindESFCore.cmake  FindPROCPS.cmake
sensors/esf-cpu-sensor/src/main/resources/: esf-cpu-sensor-database.sql
sensors/esf-network-sensor/: CMakeLists.txt  CMakeTestLists.txt
sensors/esf-network-sensor/cmake/: BuildSetup.cmake  Util.cmake
sensors/esf-network-sensor/src/main/resources/: esf-network-sensor-database.sql
(+70 files in other folders)
